[package]
name = "rustic_texture_transposer"
version = "0.1.0-alpha.1"
authors = ["PitchBlackNights"]
edition = "2021"
rust-version = "1.56"
description = "A program the converts textures between Minecraft editions"
readme = "./README.md"
repository = "https://github.com/PitchBlackNights/rustic-texture-transposer"
publish = false

[dependencies]
log = "0.4"
env_logger = "0.11"
colored = "2.1"
chrono = "0.4"
clap = { version = "4.5.17", features = ["derive"] }

# Not implemented yet
image = "0.25"
imageproc = "0.25"
criterion = "0.5"
rayon = "1.10"
crossbeam = "0.8"
serde_json = "1.0"
